tests/security/taintUnserialize/output.txt
ERROR: TaintedData - input.hack:1:19 - Data from a server request found its way to to unserialize